clusters/my-cluster/releases/apps/mailu-ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-smtp
  namespace: apps-mailu
spec:
  entryPoints: [mail-smtp]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 25
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-smtps
  namespace: apps-mailu
spec:
  entryPoints: [mail-smtps]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 465
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-submission
  namespace: apps-mailu
spec:
  entryPoints: [mail-submission]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 587
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-imap
  namespace: apps-mailu
spec:
  entryPoints: [mail-imap]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 143
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-imaps
  namespace: apps-mailu
spec:
  entryPoints: [mail-imaps]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 993
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-pop3
  namespace: apps-mailu
spec:
  entryPoints: [mail-pop3]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 110
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-pop3s
  namespace: apps-mailu
spec:
  entryPoints: [mail-pop3s]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailu-front
          port: 995
